[MaestroApp + ProdApp]: fixed flickering hatches page + Google map that wasn't displayed

--- a/css/MaestroApp.css
+++ b/css/MaestroApp.css
@@ -1,5 +1,13 @@
 ﻿body
 {
+    margin: 0;
+}
+
+#Container
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 h2, h3
@@ -50,21 +58,24 @@ div.ui-navbar ul li .ui-icon-camera-white
     border-style: hidden;
 }
 
-#map-canvas
+#map-canvas {
+    padding: 0;
+    position : absolute !important; 
+    top : 40px !important;  
+    right : 0; 
+    bottom : 0 !important;  
+    left : 0 !important;     
+}
+
+#HybridMap ui-content
 {
-    width: 360px;
-    height: 440px;
-    margin: 0 auto;
+    padding: 0;
+    margin: 0;
 }
 
 #MapLegend img
 {
     height: 200px;
-}
-
-#ServiceCallsMap .ui-content
-{
-    padding: 0;
 }
 
 .CloseServiceCallsPopup
